@@ -1,43 +1,45 @@
 /*
- * MIT License
+ * Copyright (c) 2020 - present Cloudogu GmbH
  *
- * Copyright (c) 2020-present Cloudogu GmbH and Contributors
+ * This program is free software: you can redistribute it and/or modify it under
+ * the terms of the GNU Affero General Public License as published by the Free
+ * Software Foundation, version 3.
  *
- * Permission is hereby granted, free of charge, to any person obtaining a copy
- * of this software and associated documentation files (the "Software"), to deal
- * in the Software without restriction, including without limitation the rights
- * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
- * copies of the Software, and to permit persons to whom the Software is
- * furnished to do so, subject to the following conditions:
+ * This program is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more
+ * details.
  *
- * The above copyright notice and this permission notice shall be included in all
- * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program. If not, see https://www.gnu.org/licenses/.
  */
+
 package com.cloudogu.scm.review.pullrequest.dto;
 
+import com.cloudogu.scm.review.BranchResolver;
 import com.cloudogu.scm.review.CurrentUserResolver;
 import com.cloudogu.scm.review.PermissionCheck;
 import com.cloudogu.scm.review.PullRequestResourceLinks;
-import com.cloudogu.scm.review.comment.service.Comment;
 import com.cloudogu.scm.review.comment.service.CommentService;
 import com.cloudogu.scm.review.comment.service.CommentType;
+import com.cloudogu.scm.review.config.service.BasePullRequestConfig;
+import com.cloudogu.scm.review.config.service.ConfigService;
 import com.cloudogu.scm.review.pullrequest.service.PullRequest;
 import com.cloudogu.scm.review.pullrequest.service.PullRequestService;
 import com.cloudogu.scm.review.pullrequest.service.PullRequestStatus;
 import com.cloudogu.scm.review.pullrequest.service.ReviewMark;
 import com.google.common.base.Strings;
 import de.otto.edison.hal.Embedded;
+import de.otto.edison.hal.HalRepresentation;
 import de.otto.edison.hal.Link;
 import de.otto.edison.hal.Links;
+import jakarta.inject.Inject;
+import jakarta.ws.rs.core.UriInfo;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import org.apache.shiro.SecurityUtils;
 import org.mapstruct.AfterMapping;
+import org.mapstruct.Builder;
 import org.mapstruct.Context;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
@@ -45,6 +47,7 @@ import org.mapstruct.MappingTarget;
 import org.mapstruct.ObjectFactory;
 import sonia.scm.api.v2.resources.BaseMapper;
 import sonia.scm.api.v2.resources.BranchLinkProvider;
+import sonia.scm.repository.Branch;
 import sonia.scm.repository.NamespaceAndName;
 import sonia.scm.repository.Repository;
 import sonia.scm.repository.RepositoryPermissions;
@@ -57,30 +60,29 @@ import sonia.scm.user.User;
 import sonia.scm.user.UserDisplayManager;
 import sonia.scm.web.EdisonHalAppender;
 
-import javax.inject.Inject;
-import javax.inject.Named;
-import javax.ws.rs.core.UriInfo;
 import java.net.URI;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import static com.cloudogu.scm.review.CurrentUserResolver.getCurrentUser;
+import static com.cloudogu.scm.review.pullrequest.dto.PullRequestCheckResultDto.PullRequestCheckStatus.PR_VALID;
 import static de.otto.edison.hal.Embedded.embeddedBuilder;
 import static de.otto.edison.hal.Link.link;
 import static de.otto.edison.hal.Links.linkingTo;
-import static java.util.stream.Collectors.toList;
 
-@Mapper
+@Mapper(
+  builder = @Builder(disableBuilder = true)
+)
+@SuppressWarnings("java:S6813") // we cannot use constructor injection here
 public abstract class PullRequestMapper extends BaseMapper<PullRequest, PullRequestDto> {
-
   @Inject
   private UserDisplayManager userDisplayManager;
-
+  @Inject
+  private ConfigService configService;
   @Inject
   private PullRequestService pullRequestService;
   @Inject
@@ -89,22 +91,23 @@ public abstract class PullRequestMapper extends BaseMapper<PullRequest, PullRequ
   private RepositoryServiceFactory serviceFactory;
   @Inject
   private BranchLinkProvider branchLinkProvider;
+  @Inject
+  private BranchResolver branchResolver;
 
   private PullRequestResourceLinks pullRequestResourceLinks = new PullRequestResourceLinks(() -> URI.create("/"));
 
   @Mapping(target = "attributes", ignore = true) // We do not map HAL attributes
-  @Mapping(target = "reviewer", source = "reviewer", qualifiedByName = "mapReviewer")
-  @Mapping(target = "author", source = "author", qualifiedByName = "mapUser")
-  @Mapping(target = "reviser", source = "reviser", qualifiedByName = "mapUser")
+  @Mapping(target = "reviewer", source = "reviewer")
+  @Mapping(target = "author", source = "author")
+  @Mapping(target = "reviser", source = "reviser")
   @Mapping(target = "markedAsReviewed", ignore = true)
   public abstract PullRequestDto map(PullRequest pullRequest, @Context Repository repository);
 
   @Mapping(target = "subscriber", ignore = true)
-  @Mapping(target = "reviewer", source = "reviewer", qualifiedByName = "mapReviewerFromDto")
+  @Mapping(target = "reviewer", source = "reviewer")
   @Mapping(target = "reviewMarks", ignore = true)
   public abstract PullRequest map(PullRequestDto dto);
 
-  @Named("mapReviewerFromDto")
   Map<String, Boolean> mapReviewerFromDto(Set<ReviewerDto> reviewer) {
     Map<String, Boolean> reviewerMap = new HashMap<>();
 
@@ -119,7 +122,6 @@ public abstract class PullRequestMapper extends BaseMapper<PullRequest, PullRequ
     return reviewerMap;
   }
 
-  @Named("mapReviewer")
   Set<ReviewerDto> mapReviewer(Map<String, Boolean> reviewer) {
     return reviewer
       .entrySet()
@@ -134,7 +136,6 @@ public abstract class PullRequestMapper extends BaseMapper<PullRequest, PullRequ
       .orElse(DisplayUser.from(new User(entry.getKey(), entry.getKey(), null)));
   }
 
-  @Named("mapUser")
   DisplayedUserDto mapUser(String authorId) {
     return userDisplayManager.get(authorId).map(this::createDisplayedUserDto).orElse(new DisplayedUserDto(authorId, authorId, null));
   }
@@ -154,11 +155,11 @@ public abstract class PullRequestMapper extends BaseMapper<PullRequest, PullRequ
 
   @AfterMapping
   void mapTasks(@MappingTarget PullRequestDto target, PullRequest pullRequest, @Context Repository repository) {
-    List<Comment> comments = commentService.getAll(repository.getNamespace(), repository.getName(), pullRequest.getId());
+    commentService.getAll(repository.getNamespace(), repository.getName(), pullRequest.getId());
     target.setTasks(
       new TasksDto(
-        countCommentsByFilter(comments, c -> c.getType() == CommentType.TASK_TODO),
-        countCommentsByFilter(comments, c -> c.getType() == CommentType.TASK_DONE)
+        commentService.getCount(repository.getNamespace(), repository.getName(), pullRequest.getId(), CommentType.TASK_TODO),
+        commentService.getCount(repository.getNamespace(), repository.getName(), pullRequest.getId(), CommentType.TASK_DONE)
       )
     );
   }
@@ -169,12 +170,8 @@ public abstract class PullRequestMapper extends BaseMapper<PullRequest, PullRequ
       .stream()
       .filter(mark -> mark.getUser().equals(getCurrentUser().getId()))
       .map(ReviewMark::getFile)
-      .collect(toList());
+      .toList();
     target.setMarkedAsReviewed(filesMarkedAsReviewed);
-  }
-
-  private long countCommentsByFilter(List<Comment> comments, Predicate<Comment> filter) {
-    return comments.stream().filter(filter).count();
   }
 
   @ObjectFactory
@@ -186,10 +183,12 @@ public abstract class PullRequestMapper extends BaseMapper<PullRequest, PullRequ
       .self(namespace, name, pullRequestId));
     linksBuilder.single(link("comments", pullRequestResourceLinks.pullRequestComments()
       .all(namespace, name, pullRequestId)));
+    linksBuilder.single(link("changes", pullRequestResourceLinks.pullRequestChanges()
+      .readAll(namespace, name, pullRequestId)));
     linksBuilder.single(link("events", pullRequestResourceLinks.pullRequest()
       .events(namespace, name, pullRequestId)));
     if (PermissionCheck.mayComment(repository) && CurrentUserResolver.getCurrentUser() != null) {
-      if (pullRequest.getStatus() == PullRequestStatus.OPEN) {
+      if (pullRequest.isOpen()) {
         if (pullRequestService.hasUserApproved(repository, pullRequest.getId())) {
           linksBuilder.single(link("disapprove", pullRequestResourceLinks.pullRequest().disapprove(namespace, name, pullRequestId)));
         } else {
@@ -202,35 +201,59 @@ public abstract class PullRequestMapper extends BaseMapper<PullRequest, PullRequ
           .subscription(namespace, name, pullRequestId)));
       }
     }
-    if (PermissionCheck.mayModifyPullRequest(repository, pullRequest)) {
+    if (PermissionCheck.mayModifyPullRequest(repository, pullRequest) && pullRequest.isInProgress()) {
       linksBuilder.single(link("update", pullRequestResourceLinks.pullRequest()
         .update(namespace, name, pullRequestId)));
+      linksBuilder.single(link("check", pullRequestResourceLinks.pullRequest()
+        .check(namespace, name, pullRequestId)));
     }
-    if (PermissionCheck.mayMerge(repository) && pullRequest.getStatus() == PullRequestStatus.OPEN) {
+    if (PermissionCheck.mayMerge(repository) && pullRequest.isInProgress() && RepositoryPermissions.push(repository).isPermitted() && (pullRequest.isOpen())) {
+      linksBuilder.single(link("defaultCommitMessage", pullRequestResourceLinks.mergeLinks()
+        .createDefaultCommitMessage(namespace, name, pullRequest.getId())));
+      linksBuilder.single(link("mergeStrategyInfo", pullRequestResourceLinks.mergeLinks().getMergeStrategyInfo(namespace, name, pullRequestId)));
+      appendMergeStrategyLinks(linksBuilder, repository, pullRequest);
+    }
+    if ((PermissionCheck.mayRejectPullRequest(pullRequest) || PermissionCheck.mayMerge(repository)) && pullRequest.isInProgress()) {
       linksBuilder.single(link("reject", pullRequestResourceLinks.pullRequest()
         .reject(namespace, name, pullRequestId)));
-
-      if (RepositoryPermissions.push(repository).isPermitted() && pullRequest.getStatus() == PullRequestStatus.OPEN) {
-        linksBuilder.single(link("mergeCheck", pullRequestResourceLinks.mergeLinks()
-          .check(namespace, name, pullRequest.getId())));
-        linksBuilder.single(link("mergeConflicts", pullRequestResourceLinks.mergeLinks()
-          .conflicts(namespace, name, pullRequest.getId())));
-        linksBuilder.single(link("defaultCommitMessage", pullRequestResourceLinks.mergeLinks()
-          .createDefaultCommitMessage(namespace, name, pullRequest.getId())));
-        linksBuilder.single(link("mergeStrategyInfo", pullRequestResourceLinks.mergeLinks().getMergeStrategyInfo(namespace, name, pullRequestId)));
-        appendMergeStrategyLinks(linksBuilder, repository, pullRequest);
-      }
+      linksBuilder.single(link("rejectWithMessage", pullRequestResourceLinks.pullRequest()
+        .rejectWithMessage(namespace, name, pullRequestId)));
     }
+
+    Optional<Branch> sourceBranch = branchResolver.find(repository, pullRequest.getSource());
+    Optional<Branch> targetBranch = branchResolver.find(repository, pullRequest.getTarget());
+    boolean isPrCreationValid = false;
+    if (sourceBranch.isPresent() && targetBranch.isPresent()) {
+      isPrCreationValid = PR_VALID.equals(pullRequestService.checkIfPullRequestIsValid(repository, pullRequest.getSource(), pullRequest.getTarget()));
+    }
+
+    if (PermissionCheck.mayCreate(repository) && pullRequest.isRejected() && sourceBranch.isPresent() && targetBranch.isPresent() && isPrCreationValid) {
+      linksBuilder.single(link("reopen", pullRequestResourceLinks.pullRequest()
+        .reopen(namespace, name, pullRequestId)));
+    }
+
     linksBuilder.single(link("reviewMark", pullRequestResourceLinks.pullRequest().reviewMark(namespace, name, pullRequestId)));
+
+    if ((PermissionCheck.mayMerge(repository) || pullRequest.getAuthor().equals(SecurityUtils.getSubject().getPrincipals().getPrimaryPrincipal().toString())) && pullRequest.getStatus() == PullRequestStatus.DRAFT) {
+      linksBuilder.single(link("convertToPR", pullRequestResourceLinks.pullRequest().convertToPR(namespace, name, pullRequestId)));
+    }
     linksBuilder.single(link("sourceBranch", branchLinkProvider.get(repository.getNamespaceAndName(), pullRequest.getSource())));
     linksBuilder.single(link("targetBranch", branchLinkProvider.get(repository.getNamespaceAndName(), pullRequest.getTarget())));
-    if (pullRequest.getStatus() == PullRequestStatus.OPEN) {
+    if (pullRequest.isInProgress()) {
       linksBuilder.single(link("workflowResult", pullRequestResourceLinks.workflowEngineLinks().results(namespace, name, pullRequest.getId())));
     }
-
+    linksBuilder.single(link("mergeConflicts", pullRequestResourceLinks.mergeLinks().conflicts(namespace, name, pullRequest.getId())));
+    linksBuilder.single(link("mergeCheck", pullRequestResourceLinks.mergeLinks().check(namespace, name, pullRequest.getId())));
     Embedded.Builder embeddedBuilder = embeddedBuilder();
+    embedDefaultConfig(repository, embeddedBuilder);
+    embeddedBuilder.with("availableLabels", new LabelsDto(configService.evaluateConfig(repository).getLabels()));
     applyEnrichers(new EdisonHalAppender(linksBuilder, embeddedBuilder), pullRequest, repository);
     return new PullRequestDto(linksBuilder.build(), embeddedBuilder.build());
+  }
+
+  private void embedDefaultConfig(Repository repository, Embedded.Builder embeddedBuilder) {
+    BasePullRequestConfig basePullRequestConfig = configService.evaluateConfig(repository);
+    embeddedBuilder.with("defaultConfig", new DefaultConfigDto(basePullRequestConfig.getDefaultMergeStrategy().name(), basePullRequestConfig.isDeleteBranchOnMerge()));
   }
 
   private void appendMergeStrategyLinks(Links.Builder linksBuilder, Repository repository, PullRequest pullRequest) {
@@ -239,13 +262,13 @@ public abstract class PullRequestMapper extends BaseMapper<PullRequest, PullRequ
         List<Link> mergeStrategyLinks = service.getMergeCommand().getSupportedMergeStrategies()
           .stream()
           .map(strategy -> createMergeStrategyLink(repository.getNamespaceAndName(), pullRequest, strategy))
-          .collect(toList());
+          .toList();
         linksBuilder.array(mergeStrategyLinks);
         if (PermissionCheck.mayPerformEmergencyMerge(repository)) {
           List<Link> emergencyMergeStrategyLinks = service.getMergeCommand().getSupportedMergeStrategies()
             .stream()
             .map(strategy -> createEmergencyMergeStrategyLink(repository.getNamespaceAndName(), pullRequest, strategy))
-            .collect(toList());
+            .toList();
           linksBuilder.array(emergencyMergeStrategyLinks);
         }
       }
@@ -262,21 +285,29 @@ public abstract class PullRequestMapper extends BaseMapper<PullRequest, PullRequ
 
   private Link createMergeStrategyLink(NamespaceAndName namespaceAndName, PullRequest pullRequest, MergeStrategy strategy) {
     return Link.linkBuilder("merge", pullRequestResourceLinks.mergeLinks().merge(
-      namespaceAndName.getNamespace(),
-      namespaceAndName.getName(),
-      pullRequest.getId(),
-      strategy
+        namespaceAndName.getNamespace(),
+        namespaceAndName.getName(),
+        pullRequest.getId(),
+        strategy
       )
     ).withName(strategy.name()).build();
   }
 
   private Link createEmergencyMergeStrategyLink(NamespaceAndName namespaceAndName, PullRequest pullRequest, MergeStrategy strategy) {
     return Link.linkBuilder("emergencyMerge", pullRequestResourceLinks.mergeLinks().emergencyMerge(
-      namespaceAndName.getNamespace(),
-      namespaceAndName.getName(),
-      pullRequest.getId(),
-      strategy
+        namespaceAndName.getNamespace(),
+        namespaceAndName.getName(),
+        pullRequest.getId(),
+        strategy
       )
     ).withName(strategy.name()).build();
+  }
+
+  @AllArgsConstructor
+  @Getter
+  @SuppressWarnings("java:S2160") // we do not need equals or hashcode
+  static class DefaultConfigDto extends HalRepresentation {
+    private String mergeStrategy;
+    private boolean deleteBranchOnMerge;
   }
 }
