@@ -1,73 +1,63 @@
 /*
- * MIT License
+ * Copyright (c) 2020 - present Cloudogu GmbH
  *
- * Copyright (c) 2020-present Cloudogu GmbH and Contributors
+ * This program is free software: you can redistribute it and/or modify it under
+ * the terms of the GNU Affero General Public License as published by the Free
+ * Software Foundation, version 3.
  *
- * Permission is hereby granted, free of charge, to any person obtaining a copy
- * of this software and associated documentation files (the "Software"), to deal
- * in the Software without restriction, including without limitation the rights
- * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
- * copies of the Software, and to permit persons to whom the Software is
- * furnished to do so, subject to the following conditions:
+ * This program is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more
+ * details.
  *
- * The above copyright notice and this permission notice shall be included in all
- * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program. If not, see https://www.gnu.org/licenses/.
  */
+
 package com.cloudogu.scm.review.pullrequest.api;
 
 import com.cloudogu.scm.review.BranchResolver;
 import com.cloudogu.scm.review.PullRequestMediaType;
-import com.cloudogu.scm.review.RepositoryResolver;
-import com.cloudogu.scm.review.comment.service.Comment;
 import com.cloudogu.scm.review.comment.service.CommentService;
 import com.cloudogu.scm.review.comment.service.CommentType;
-import com.cloudogu.scm.review.comment.service.Location;
+import com.cloudogu.scm.review.config.service.BasePullRequestConfig;
+import com.cloudogu.scm.review.config.service.ConfigService;
+import com.cloudogu.scm.review.config.service.RepositoryPullRequestConfig;
+import com.cloudogu.scm.review.pullrequest.dto.PullRequestCheckResultDto;
 import com.cloudogu.scm.review.pullrequest.dto.PullRequestMapperImpl;
-import com.cloudogu.scm.review.pullrequest.service.DefaultPullRequestService;
 import com.cloudogu.scm.review.pullrequest.service.PullRequest;
+import com.cloudogu.scm.review.pullrequest.service.PullRequestChange;
+import com.cloudogu.scm.review.pullrequest.service.PullRequestChangeService;
+import com.cloudogu.scm.review.pullrequest.service.PullRequestService;
 import com.cloudogu.scm.review.pullrequest.service.PullRequestStatus;
-import com.cloudogu.scm.review.pullrequest.service.PullRequestStore;
-import com.cloudogu.scm.review.pullrequest.service.PullRequestStoreFactory;
 import com.cloudogu.scm.review.pullrequest.service.ReviewMark;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.sdorra.shiro.ShiroRule;
 import com.github.sdorra.shiro.SubjectAware;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import com.google.common.io.Resources;
 import com.google.inject.util.Providers;
+import jakarta.servlet.http.HttpServletResponse;
 import org.apache.shiro.subject.PrincipalCollection;
 import org.apache.shiro.subject.Subject;
 import org.apache.shiro.util.ThreadContext;
 import org.assertj.core.util.Lists;
 import org.jboss.resteasy.mock.MockHttpRequest;
-import org.jboss.resteasy.mock.MockHttpResponse;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.Answers;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 import sonia.scm.NotFoundException;
 import sonia.scm.api.v2.resources.BranchLinkProvider;
-import sonia.scm.event.ScmEventBus;
-import sonia.scm.repository.Branch;
 import sonia.scm.repository.Changeset;
 import sonia.scm.repository.ChangesetPagingResult;
 import sonia.scm.repository.NamespaceAndName;
+import sonia.scm.repository.Person;
 import sonia.scm.repository.Repository;
 import sonia.scm.repository.api.LogCommandBuilder;
 import sonia.scm.repository.api.RepositoryService;
@@ -76,32 +66,34 @@ import sonia.scm.sse.ChannelRegistry;
 import sonia.scm.user.DisplayUser;
 import sonia.scm.user.User;
 import sonia.scm.user.UserDisplayManager;
+import sonia.scm.web.JsonMockHttpRequest;
+import sonia.scm.web.JsonMockHttpResponse;
 import sonia.scm.web.RestDispatcher;
 
-import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 
 import static com.cloudogu.scm.review.TestData.createPullRequest;
+import static com.cloudogu.scm.review.pullrequest.service.PullRequestRejectedEvent.RejectionCause.REJECTED_BY_USER;
+import static com.cloudogu.scm.review.pullrequest.service.PullRequestStatus.MERGED;
+import static com.cloudogu.scm.review.pullrequest.service.PullRequestStatus.OPEN;
 import static com.cloudogu.scm.review.pullrequest.service.PullRequestStatus.REJECTED;
-import static java.util.Arrays.asList;
-import static java.util.Collections.emptyList;
-import static java.util.Collections.singleton;
 import static java.util.Collections.singletonMap;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.junit.Assert.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.argThat;
-import static org.mockito.Mockito.RETURNS_DEEP_STUBS;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
@@ -118,28 +110,20 @@ public class PullRequestRootResourceTest {
   @Rule
   public ShiroRule shiroRule = new ShiroRule();
 
-  private final RepositoryResolver repositoryResolver = mock(RepositoryResolver.class);
-  private final BranchResolver branchResolver = mock(BranchResolver.class);
-  private final PullRequestStoreFactory storeFactory = mock(PullRequestStoreFactory.class);
-  private final PullRequestStore store = mock(PullRequestStore.class);
-  private final Repository repository = mock(Repository.class);
-  private final BranchLinkProvider branchLinkProvider = mock(BranchLinkProvider.class);
-  private final ArgumentCaptor<PullRequest> pullRequestStoreCaptor = ArgumentCaptor.forClass(PullRequest.class);
-
   private RestDispatcher dispatcher;
 
-  private final MockHttpResponse response = new MockHttpResponse();
+  private final JsonMockHttpResponse response = new JsonMockHttpResponse();
   private final Subject subject = mock(Subject.class);
 
-  private static final String REPOSITORY_NAME = "repo";
   private static final String REPOSITORY_ID = "repo_ID";
   private static final String REPOSITORY_NAMESPACE = "ns";
+  private static final String REPOSITORY_NAME = "repo";
+  private static final Repository repository = new Repository(REPOSITORY_ID, "git", REPOSITORY_NAMESPACE, REPOSITORY_NAME);
 
   @Mock
   private UserDisplayManager userDisplayManager;
-
   @Mock
-  private DefaultPullRequestService pullRequestService;
+  private PullRequestService pullRequestService;
   @Mock
   private RepositoryServiceFactory repositoryServiceFactory;
   @Mock
@@ -150,30 +134,47 @@ public class PullRequestRootResourceTest {
   private CommentService commentService;
   @Mock
   private ChannelRegistry channelRegistry;
-
+  @Mock
+  private ConfigService configService;
+  @Mock
+  private PullRequestChangeService pullRequestChangeService;
+  @Mock
+  private BranchResolver branchResolver;
+  @Mock
+  private BranchLinkProvider branchLinkProvider;
   @InjectMocks
   private PullRequestMapperImpl mapper;
 
-  private final ScmEventBus eventBus = mock(ScmEventBus.class);
+  private int nextPullRequestId = 1;
 
   @Before
   public void init() {
-    when(repository.getId()).thenReturn(REPOSITORY_ID);
-    when(repository.getName()).thenReturn(REPOSITORY_NAME);
-    when(repository.getNamespace()).thenReturn(REPOSITORY_NAMESPACE);
-    when(repository.getNamespaceAndName()).thenReturn(new NamespaceAndName(REPOSITORY_NAMESPACE, REPOSITORY_NAME));
-    when(repositoryResolver.resolve(any())).thenReturn(repository);
-    when(pullRequestService.getRepository(repository.getNamespace(), repository.getName())).thenReturn(repository);
-    DefaultPullRequestService service = new DefaultPullRequestService(repositoryResolver, branchResolver, storeFactory, eventBus, repositoryServiceFactory);
-    PullRequestRootResource pullRequestRootResource = new PullRequestRootResource(mapper, service, repositoryServiceFactory, Providers.of(new PullRequestResource(mapper, service, null, null, channelRegistry)));
-    when(storeFactory.create(null)).thenReturn(store);
-    when(storeFactory.create(any())).thenReturn(store);
-    when(store.add(pullRequestStoreCaptor.capture())).thenReturn("1");
+    PullRequestRootResource pullRequestRootResource = new PullRequestRootResource(
+      mapper,
+      pullRequestService,
+      commentService,
+      repositoryServiceFactory,
+      Providers.of(new PullRequestResource(
+        mapper,
+        pullRequestService,
+        null,
+        null,
+        channelRegistry,
+        pullRequestChangeService
+      )),
+      configService,
+      userDisplayManager
+    );
     when(branchLinkProvider.get(any(NamespaceAndName.class), anyString())).thenReturn("");
     dispatcher = new RestDispatcher();
     dispatcher.addSingletonResource(pullRequestRootResource);
     lenient().when(repositoryServiceFactory.create(any(Repository.class))).thenReturn(repositoryService);
     lenient().when(userDisplayManager.get("reviewer")).thenReturn(Optional.of(DisplayUser.from(new User("reviewer", "reviewer", ""))));
+    lenient().when(configService.evaluateConfig(repository)).thenReturn(new BasePullRequestConfig());
+    when(pullRequestService.getRepository(REPOSITORY_NAMESPACE, REPOSITORY_NAME))
+      .thenReturn(repository);
+    doAnswer(invocationOnMock -> Integer.toString(nextPullRequestId++))
+      .when(pullRequestService).add(any(), any());
   }
 
   @After
@@ -185,21 +186,56 @@ public class PullRequestRootResourceTest {
   @SubjectAware(username = "slarti")
   public void shouldCreateNewValidPullRequest() throws URISyntaxException, IOException {
     mockPrincipal();
-    mockChangesets("sourceBranch", "targetBranch", new Changeset());
 
     byte[] pullRequestJson = loadJson("com/cloudogu/scm/review/pullRequest.json");
     MockHttpRequest request =
       MockHttpRequest
-        .post("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/space/name")
+        .post("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo")
         .content(pullRequestJson)
         .contentType(PullRequestMediaType.PULL_REQUEST);
 
     dispatcher.invoke(request, response);
 
     assertEquals(HttpServletResponse.SC_CREATED, response.getStatus());
-    assertThat(response.getOutputHeaders().getFirst("Location")).hasToString("/v2/pull-requests/space/name/1");
-    PullRequest pullRequest = pullRequestStoreCaptor.getValue();
-    assertThat(pullRequest.getAuthor()).isEqualTo("user1");
+    assertThat(response.getOutputHeaders().getFirst("Location")).hasToString("/v2/pull-requests/ns/repo/1");
+    verify(pullRequestService).add(
+      argThat(repository ->
+        repository.getNamespace().equals(REPOSITORY_NAMESPACE)
+          && repository.getName().equals(REPOSITORY_NAME)),
+      argThat(pullRequest ->
+        pullRequest.getSource().equals("sourceBranch")
+          && pullRequest.getTarget().equals("targetBranch")
+          && pullRequest.getAuthor().equals("user1")
+          && pullRequest.getStatus().equals(OPEN))
+    );
+  }
+
+  @Test
+  @SubjectAware(username = "slarti")
+  public void shouldCreateNewPullRequestWithDefaultStatusOpen() throws URISyntaxException, IOException {
+    mockPrincipal();
+
+    byte[] pullRequestJson = loadJson("com/cloudogu/scm/review/pullRequest_without_status.json");
+    MockHttpRequest request =
+      MockHttpRequest
+        .post("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/" + REPOSITORY_NAMESPACE + "/" + REPOSITORY_NAME)
+        .content(pullRequestJson)
+        .contentType(PullRequestMediaType.PULL_REQUEST);
+
+    dispatcher.invoke(request, response);
+
+    assertEquals(HttpServletResponse.SC_CREATED, response.getStatus());
+    assertThat(response.getOutputHeaders().getFirst("Location")).hasToString("/v2/pull-requests/" + REPOSITORY_NAMESPACE + "/" + REPOSITORY_NAME + "/1");
+    verify(pullRequestService).add(
+      argThat(repository ->
+        repository.getNamespace().equals(REPOSITORY_NAMESPACE)
+          && repository.getName().equals(REPOSITORY_NAME)),
+      argThat(pullRequest ->
+        pullRequest.getSource().equals("sourceBranch")
+          && pullRequest.getTarget().equals("targetBranch")
+          && pullRequest.getAuthor().equals("user1")
+          && pullRequest.getStatus().equals(OPEN))
+    );
   }
 
   @Test
@@ -214,7 +250,7 @@ public class PullRequestRootResourceTest {
   @Test
   @SubjectAware(username = "trillian")
   public void shouldGetUnauthorizedExceptionWhenMissingPermissionOnGetAllPR() throws URISyntaxException {
-    MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/" + REPOSITORY_NAMESPACE + "/" + REPOSITORY_NAME + "");
+    MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/" + REPOSITORY_NAMESPACE + "/" + REPOSITORY_NAME);
     dispatcher.invoke(request, response);
 
     assertEquals(HttpServletResponse.SC_FORBIDDEN, response.getStatus());
@@ -224,7 +260,7 @@ public class PullRequestRootResourceTest {
   @SubjectAware(username = "trillian")
   public void shouldGetUnauthorizedExceptionWhenMissingPermissionOnCreatePR() throws URISyntaxException, IOException {
     byte[] pullRequestJson = loadJson("com/cloudogu/scm/review/pullRequest.json");
-    MockHttpRequest request = MockHttpRequest.post("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/space/name")
+    MockHttpRequest request = MockHttpRequest.post("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/" + REPOSITORY_NAMESPACE + "/" + REPOSITORY_NAME)
       .content(pullRequestJson)
       .contentType(PullRequestMediaType.PULL_REQUEST);
     dispatcher.invoke(request, response);
@@ -235,21 +271,19 @@ public class PullRequestRootResourceTest {
   @Test
   @SubjectAware(username = "slarti")
   public void shouldGetAlreadyExistsExceptionOnCreatePR() throws URISyntaxException, IOException {
-    PullRequest pr = new PullRequest();
+    PullRequest pr = new PullRequest("id", "source", "target");
     pr.setStatus(PullRequestStatus.OPEN);
-    pr.setSource("source");
-    pr.setTarget("target");
     pr.setTitle("title");
-    pr.setId("id");
-    when(store.getAll()).thenReturn(Lists.newArrayList(pr));
+    when(pullRequestService.getInProgress(repository, "source", "target")).thenReturn(Optional.of(pr));
 
-    byte[] pullRequestJson = "{\"source\": \"source\", \"target\": \"target\", \"title\": \"pull request\"}".getBytes();
-    when(repositoryResolver.resolve(new NamespaceAndName(REPOSITORY_NAMESPACE, REPOSITORY_NAME))).thenReturn(repository);
+    byte[] pullRequestJson = "{\"source\": \"source\", \"target\": \"target\", \"title\": \"pull request\", \"status\": \"OPEN\"}".getBytes();
     MockHttpRequest request = MockHttpRequest
       .post("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/" + REPOSITORY_NAMESPACE + "/" + REPOSITORY_NAME)
       .content(pullRequestJson)
       .contentType(PullRequestMediaType.PULL_REQUEST);
     dispatcher.invoke(request, response);
+
+    assertThat(response.getStatus()).isEqualTo(HttpServletResponse.SC_CONFLICT);
     assertThat(response.getContentAsString()).containsPattern("pull request with id id in repository with id .* already exists");
   }
 
@@ -266,7 +300,7 @@ public class PullRequestRootResourceTest {
     dispatcher.invoke(request, response);
 
     assertEquals(HttpServletResponse.SC_BAD_REQUEST, response.getStatus());
-    verify(store, never()).add(any());
+    verify(pullRequestService, never()).add(any(), any());
   }
 
   @Test
@@ -275,39 +309,20 @@ public class PullRequestRootResourceTest {
     byte[] pullRequestJson = loadJson("com/cloudogu/scm/review/pullRequest_sameBranches.json");
     MockHttpRequest request =
       MockHttpRequest
-        .post("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/space/name")
+        .post("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/" + REPOSITORY_NAMESPACE + "/" + REPOSITORY_NAME)
         .content(pullRequestJson)
         .contentType(PullRequestMediaType.PULL_REQUEST);
 
     dispatcher.invoke(request, response);
 
     assertEquals(HttpServletResponse.SC_BAD_REQUEST, response.getStatus());
-    verify(store, never()).add(any());
-  }
-
-  @Test
-  @SubjectAware(username = "slarti")
-  public void shouldRejectWithoutDiff() throws URISyntaxException, IOException {
-    mockPrincipal();
-    mockChangesets("sourceBranch", "targetBranch");
-
-    byte[] pullRequestJson = loadJson("com/cloudogu/scm/review/pullRequest.json");
-    MockHttpRequest request =
-      MockHttpRequest
-        .post("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/space/name")
-        .content(pullRequestJson)
-        .contentType(PullRequestMediaType.PULL_REQUEST);
-
-    dispatcher.invoke(request, response);
-
-    assertEquals(HttpServletResponse.SC_BAD_REQUEST, response.getStatus());
-    verify(store, never()).add(any());
+    verify(pullRequestService, never()).add(any(), any());
   }
 
   @Test
   @SubjectAware(username = "trillian")
   public void shouldHandleMissingRepository() throws URISyntaxException, IOException {
-    when(repositoryResolver.resolve(new NamespaceAndName("space", "X")))
+    when(pullRequestService.getRepository("space", "X"))
       .thenThrow(new NotFoundException("x", "y"));
     byte[] pullRequestJson = loadJson("com/cloudogu/scm/review/pullRequest.json");
     MockHttpRequest request =
@@ -322,96 +337,50 @@ public class PullRequestRootResourceTest {
   }
 
   @Test
-  @SubjectAware(username = "slarti")
-  public void shouldHandleMissingBranch() throws URISyntaxException, IOException {
-    when(branchResolver.resolve(repository, "sourceBranch")).thenThrow(new NotFoundException("x", "y"));
-    byte[] pullRequestJson = loadJson("com/cloudogu/scm/review/pullRequest.json");
-    MockHttpRequest request =
-      MockHttpRequest
-        .post("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/" + REPOSITORY_NAMESPACE + "/" + REPOSITORY_NAME)
-        .content(pullRequestJson)
-        .contentType(PullRequestMediaType.PULL_REQUEST);
-
-    dispatcher.invoke(request, response);
-
-    assertThat(response.getContentAsString()).containsPattern("could not find.*");
-  }
-
-  @Test
   @SubjectAware(username = "rr")
   public void shouldGetPullRequest() throws URISyntaxException, UnsupportedEncodingException {
-    when(repositoryResolver.resolve(new NamespaceAndName(REPOSITORY_NAMESPACE, REPOSITORY_NAME))).thenReturn(repository);
     PullRequest pullRequest = createPullRequest();
-    List<Comment> comments = new ArrayList<>();
-    comments.add(createCommentWithType(CommentType.TASK_TODO));
-    when(commentService.getAll(REPOSITORY_NAMESPACE, REPOSITORY_NAME, pullRequest.getId())).thenReturn(comments);
-    when(store.get("123")).thenReturn(pullRequest);
+    when(commentService.getCount(REPOSITORY_NAMESPACE, REPOSITORY_NAME, pullRequest.getId(), CommentType.TASK_TODO)).thenReturn(1);
+    when(commentService.getCount(REPOSITORY_NAMESPACE, REPOSITORY_NAME, pullRequest.getId(), CommentType.TASK_DONE)).thenReturn(2);
+    when(pullRequestService.get(REPOSITORY_NAMESPACE, REPOSITORY_NAME, "123")).thenReturn(pullRequest);
+
     MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/" + REPOSITORY_NAMESPACE + "/" + REPOSITORY_NAME + "/123");
     dispatcher.invoke(request, response);
+
     assertThat(response.getStatus()).isEqualTo(200);
     assertThat(response.getContentAsString()).contains("_links");
     assertThat(response.getContentAsString()).contains("\"tasks\":{\"todo\":1");
-    assertThat(response.getContentAsString()).contains("\"done\":0");
-  }
-
-  private Comment createCommentWithType(CommentType commentType) {
-    Comment comment = Comment.createComment("1", "trillian", "tricia", new Location());
-    comment.setType(commentType);
-    return comment;
+    assertThat(response.getContentAsString()).contains("\"done\":2");
   }
 
   @Test
   @SubjectAware(username = "rr")
-  public void shouldSortPullRequestsByLastModified() throws URISyntaxException, IOException {
-    when(repositoryResolver.resolve(new NamespaceAndName(REPOSITORY_NAMESPACE, REPOSITORY_NAME))).thenReturn(repository);
-    String firstPR = "first_PR";
-    String toDayUpdatedPR = "to_day_updated_PR";
-    String lastPR = "last_PR";
-
-    Instant firstCreation = Instant.MIN;
-    Instant firstCreationPlusOneDay = firstCreation.plus(Duration.ofDays(1));
-    Instant lastCreation = Instant.MAX;
-
-    PullRequest firstPullRequest = createPullRequest(firstPR);
-    firstPullRequest.setCreationDate(firstCreationPlusOneDay);
-    firstPullRequest.setLastModified(firstCreationPlusOneDay);
-
-    PullRequest toDayUpdatedPullRequest = createPullRequest(toDayUpdatedPR);
-    toDayUpdatedPullRequest.setCreationDate(firstCreation);
-    toDayUpdatedPullRequest.setLastModified(Instant.now());
-
-    PullRequest lastPullRequest = createPullRequest(lastPR);
-    lastPullRequest.setCreationDate(lastCreation);
-    lastPullRequest.setLastModified(lastCreation);
-
-    when(store.getAll()).thenReturn(Lists.newArrayList(lastPullRequest, firstPullRequest, toDayUpdatedPullRequest));
-    MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/" + REPOSITORY_NAMESPACE + "/" + REPOSITORY_NAME + "");
+  public void shouldSortPullRequestsByLastModified() throws URISyntaxException {
+    when(pullRequestService.count(eq(REPOSITORY_NAMESPACE), eq(REPOSITORY_NAME), any())).thenReturn(10);
+    MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/" + REPOSITORY_NAMESPACE + "/" + REPOSITORY_NAME);
     dispatcher.invoke(request, response);
-    assertThat(response.getStatus()).isEqualTo(200);
-    ObjectMapper mapper = new ObjectMapper();
-    JsonNode jsonNode = mapper.readValue(response.getContentAsString(), JsonNode.class);
-    JsonNode prNode = jsonNode.get("_embedded").get("pullRequests");
-    JsonNode pr_1 = prNode.path(0);
-    JsonNode pr_2 = prNode.path(1);
-    JsonNode pr_3 = prNode.path(2);
 
-    assertThat(pr_1.get("id").asText()).isEqualTo(lastPR);
-    assertThat(pr_2.get("id").asText()).isEqualTo(toDayUpdatedPR);
-    assertThat(pr_3.get("id").asText()).isEqualTo(firstPR);
-
-    // Check with default values
-    assertThat(jsonNode.get("page").asText()).isEqualTo("0");
-    assertThat(jsonNode.get("pageTotal").asText()).isEqualTo("1");
+    verify(pullRequestService)
+      .getAll(
+        eq(REPOSITORY_NAMESPACE),
+        eq(REPOSITORY_NAME),
+        argThat(requestParameters ->
+          requestParameters.offset() == 0 &&
+            requestParameters.limit() == 10 &&
+            requestParameters.pullRequestSelector().equals(PullRequestSelector.IN_PROGRESS) &&
+            requestParameters.pullRequestSortSelector().equals(PullRequestSortSelector.LAST_MOD_DESC)
+        )
+      );
   }
 
   @Test
   @SubjectAware(username = "rr")
   public void shouldGetAllPullRequests() throws URISyntaxException, UnsupportedEncodingException {
-    when(repositoryResolver.resolve(new NamespaceAndName(REPOSITORY_NAMESPACE, REPOSITORY_NAME))).thenReturn(repository);
     String id_1 = "id_1";
     String id_2 = "ABC ID 2";
     List<PullRequest> pullRequests = Lists.newArrayList(createPullRequest(id_1), createPullRequest(id_2));
-    when(store.getAll()).thenReturn(pullRequests);
+    when(pullRequestService.getAll(eq(REPOSITORY_NAMESPACE), eq(REPOSITORY_NAME), any())).thenReturn(pullRequests);
+    when(pullRequestService.count(eq(REPOSITORY_NAMESPACE), eq(REPOSITORY_NAME), any())).thenReturn(2);
 
     // request all PRs without filter
     MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/" + REPOSITORY_NAMESPACE + "/" + REPOSITORY_NAME);
@@ -430,13 +399,49 @@ public class PullRequestRootResourceTest {
   }
 
   @Test
+  @SubjectAware(username = "dent")
+  public void shouldGetCreateLinkOnEmptyPullRequests() throws URISyntaxException {
+    when(pullRequestService.count(eq(REPOSITORY_NAMESPACE), eq(REPOSITORY_NAME), any()))
+      .thenReturn(0);
+
+    // request all PRs without filter
+    MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/" + REPOSITORY_NAMESPACE + "/" + REPOSITORY_NAME);
+    dispatcher.invoke(request, response);
+
+    assertThat(response.getContentAsJson().get("_links").get("create").get("href").asText()).isEqualTo("/v2/pull-requests/ns/repo");
+  }
+
+  @Test
+  @SubjectAware(username = "rr")
+  public void shouldGetAllPullRequestsSortedByIdAscending() throws URISyntaxException {
+    when(pullRequestService.count(eq(REPOSITORY_NAMESPACE), eq(REPOSITORY_NAME), any())).thenReturn(10);
+
+    MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/" + REPOSITORY_NAMESPACE + "/" + REPOSITORY_NAME + "?status=ALL" + "&sortBy=ID_ASC");
+    dispatcher.invoke(request, response);
+
+    verify(pullRequestService)
+      .getAll(
+        eq(REPOSITORY_NAMESPACE),
+        eq(REPOSITORY_NAME),
+        argThat(requestParameters ->
+          requestParameters.offset() == 0 &&
+            requestParameters.limit() == 10 &&
+            requestParameters.pullRequestSelector().equals(PullRequestSelector.ALL) &&
+            requestParameters.pullRequestSortSelector().equals(PullRequestSortSelector.ID_ASC)
+        )
+      );
+  }
+
+  @Test
   @SubjectAware(username = "rr")
   public void shouldGetAllPullRequestsWithPagination() throws URISyntaxException, UnsupportedEncodingException {
-    when(repositoryResolver.resolve(new NamespaceAndName(REPOSITORY_NAMESPACE, REPOSITORY_NAME))).thenReturn(repository);
     String id_1 = "id_1";
     String id_2 = "ABC ID 2";
-    List<PullRequest> pullRequests = Lists.newArrayList(createPullRequest(id_1), createPullRequest(id_2));
-    when(store.getAll()).thenReturn(pullRequests);
+    when(pullRequestService.getAll(eq(REPOSITORY_NAMESPACE), eq(REPOSITORY_NAME), argThat(params -> params.offset() == 0)))
+      .thenReturn(List.of(createPullRequest(id_1)));
+    when(pullRequestService.getAll(eq(REPOSITORY_NAMESPACE), eq(REPOSITORY_NAME), argThat(params -> params.offset() == 1)))
+      .thenReturn(List.of(createPullRequest(id_2)));
+    when(pullRequestService.count(eq(REPOSITORY_NAMESPACE), eq(REPOSITORY_NAME), any())).thenReturn(2);
 
     // Results for first page
     MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/" + REPOSITORY_NAMESPACE + "/" + REPOSITORY_NAME + "?page=0&pageSize=1");
@@ -445,6 +450,15 @@ public class PullRequestRootResourceTest {
     assertThat(response.getContentAsString()).contains("\"id\":\"" + id_1 + "\"");
     assertThat(response.getContentAsString()).contains("\"page\":0");
     assertThat(response.getContentAsString()).contains("\"pageTotal\":2");
+    verify(pullRequestService)
+      .getAll(
+        eq(REPOSITORY_NAMESPACE),
+        eq(REPOSITORY_NAME),
+        argThat(requestParameters ->
+          requestParameters.offset() == 0 &&
+            requestParameters.limit() == 1
+        )
+      );
 
     // Results for second page
     request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/" + REPOSITORY_NAMESPACE + "/" + REPOSITORY_NAME + "?page=1&pageSize=1");
@@ -454,61 +468,21 @@ public class PullRequestRootResourceTest {
     assertThat(response.getContentAsString()).contains("\"id\":\"" + id_2 + "\"");
     assertThat(response.getContentAsString()).contains("\"page\":1");
     assertThat(response.getContentAsString()).contains("\"pageTotal\":2");
-  }
-
-  @Test
-  @SubjectAware(username = "rr")
-  public void shouldGetOpenedPullRequests() throws URISyntaxException, IOException {
-    verifyFilteredPullRequests(PullRequestSelector.OPEN.name());
-  }
-
-  @Test
-  @SubjectAware(username = "rr")
-  public void shouldGetRejectedPullRequests() throws URISyntaxException, IOException {
-    verifyFilteredPullRequests(PullRequestSelector.REJECTED.name());
-  }
-
-  @Test
-  @SubjectAware(username = "rr")
-  public void shouldGetMergedPullRequests() throws URISyntaxException, IOException {
-    verifyFilteredPullRequests(PullRequestSelector.MERGED.name());
-  }
-
-  @Test
-  @SubjectAware(username = "author")
-  public void shouldGetMinePullRequests() throws URISyntaxException, IOException {
-    initRepoWithPRs("ns", "repo");
-    MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo?status=MINE");
-    dispatcher.invoke(request, response);
-    assertThat(response.getStatus()).isEqualTo(200);
-    JsonNode jsonNode = new ObjectMapper().readValue(response.getContentAsString(), JsonNode.class);
-    JsonNode prNode = jsonNode.get("_embedded").get("pullRequests");
-    assertThat(prNode.elements().hasNext()).isTrue();
-    prNode.elements().forEachRemaining(node -> assertThat(node.get("author").get("id").asText()).isEqualTo("author"));
-  }
-
-  @Test
-  @SubjectAware(username = "reviewer")
-  public void shouldGetReviewerPullRequests() throws URISyntaxException, IOException {
-    initRepoWithPRs("ns", "repo");
-    MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo?status=REVIEWER");
-    dispatcher.invoke(request, response);
-    assertThat(response.getStatus()).isEqualTo(200);
-    JsonNode jsonNode = new ObjectMapper().readValue(response.getContentAsString(), JsonNode.class);
-    JsonNode prNode = jsonNode.get("_embedded").get("pullRequests");
-    assertThat(prNode.elements().hasNext()).isTrue();
-    prNode.elements().forEachRemaining(
-      node -> {
-        assertThat(node.get("reviewer").get(0).get("id").asText()).isEqualTo("reviewer");
-        assertThat(node.get("status").asText()).isEqualTo("OPEN");
-      }
-    );
+    verify(pullRequestService)
+      .getAll(
+        eq(REPOSITORY_NAMESPACE),
+        eq(REPOSITORY_NAME),
+        argThat(requestParameters ->
+          requestParameters.offset() == 1 &&
+            requestParameters.limit() == 1
+        )
+      );
   }
 
   @Test
   @SubjectAware(username = "slarti", password = "secret")
   public void shouldGetEventsLink() throws URISyntaxException, IOException {
-    initRepoWithPRs("ns", "repo");
+    initRepoWithPRs();
     MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo");
     dispatcher.invoke(request, response);
     assertThat(response.getStatus()).isEqualTo(200);
@@ -524,7 +498,7 @@ public class PullRequestRootResourceTest {
   @Test
   @SubjectAware(username = "rr")
   public void shouldGetSelfLink() throws URISyntaxException, IOException {
-    initRepoWithPRs("ns", "repo");
+    initRepoWithPRs();
     MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo");
     dispatcher.invoke(request, response);
     assertThat(response.getStatus()).isEqualTo(200);
@@ -540,7 +514,7 @@ public class PullRequestRootResourceTest {
   @Test
   @SubjectAware(username = "rr")
   public void shouldNotGetUpdateLinkForUserWithoutPushPermission() throws URISyntaxException, IOException {
-    initRepoWithPRs("ns", "repo");
+    initRepoWithPRs();
     MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo");
     dispatcher.invoke(request, response);
     assertThat(response.getStatus()).isEqualTo(200);
@@ -553,7 +527,7 @@ public class PullRequestRootResourceTest {
   @Test
   @SubjectAware(username = "slarti")
   public void shouldGetCommentLink() throws URISyntaxException, IOException {
-    initRepoWithPRs("ns", "repo");
+    initRepoWithPRs();
     MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo");
     dispatcher.invoke(request, response);
     assertThat(response.getStatus()).isEqualTo(200);
@@ -568,8 +542,24 @@ public class PullRequestRootResourceTest {
 
   @Test
   @SubjectAware(username = "slarti")
+  public void shouldGetChangesLink() throws URISyntaxException, IOException {
+    initRepoWithPRs();
+    MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo");
+    dispatcher.invoke(request, response);
+    assertThat(response.getStatus()).isEqualTo(200);
+    ObjectMapper mapper = new ObjectMapper();
+    JsonNode jsonNode = mapper.readValue(response.getContentAsString(), JsonNode.class);
+    JsonNode prNode = jsonNode.get("_embedded").get("pullRequests");
+    prNode.elements().forEachRemaining(node -> {
+      String actualCollectionLink = node.path("_links").path("changes").path("href").asText();
+      assertThat(actualCollectionLink).isEqualTo("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/" + node.get("id").asText() + "/changes/");
+    });
+  }
+
+  @Test
+  @SubjectAware(username = "slarti")
   public void shouldGetUpdateLink() throws URISyntaxException, IOException {
-    initRepoWithPRs("ns", "repo");
+    initRepoWithPRs(OPEN);
     MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo");
 
     dispatcher.invoke(request, response);
@@ -590,27 +580,34 @@ public class PullRequestRootResourceTest {
   public void shouldUpdatePullRequestSuccessfully() throws URISyntaxException {
     PullRequest existingPullRequest = new PullRequest();
     existingPullRequest.setAuthor("somebody");
-    when(store.get("1")).thenReturn(existingPullRequest);
+    existingPullRequest.setStatus(PullRequestStatus.OPEN);
+    mockSinglePullRequest("1", existingPullRequest);
 
     MockHttpRequest request = MockHttpRequest
       .put("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/1")
-      .content("{\"title\": \"new Title\", \"description\": \"new description\"}".getBytes())
+      .content("{\"title\": \"new Title\", \"description\": \"new description\", \"status\": \"OPEN\"}".getBytes())
       .contentType(PullRequestMediaType.PULL_REQUEST);
     dispatcher.invoke(request, response);
 
     assertThat(response.getStatus()).isEqualTo(HttpServletResponse.SC_NO_CONTENT);
-    verify(store).update(argThat(pullRequest -> {
-      assertThat(pullRequest.getTitle()).isEqualTo("new Title");
-      assertThat(pullRequest.getDescription()).isEqualTo("new description");
-      return true;
-    }));
+    verify(pullRequestService).update(
+      eq(repository),
+      eq("1"),
+      argThat(pullRequest -> {
+          assertThat(pullRequest.getTitle()).isEqualTo("new Title");
+          assertThat(pullRequest.getDescription()).isEqualTo("new description");
+          return true;
+        }
+      )
+    );
   }
 
   @Test
   @SubjectAware(username = "slarti")
   public void shouldFailOnUpdatingNonExistingPullRequest() throws URISyntaxException, IOException {
-    initRepoWithPRs("ns", "repo");
-    when(store.get("opened_1")).thenThrow(new NotFoundException("x", "y"));
+    initRepoWithPRs();
+    when(pullRequestService.get(REPOSITORY_NAMESPACE, REPOSITORY_NAME, "opened_1"))
+      .thenThrow(new NotFoundException("x", "y"));
     MockHttpRequest request = MockHttpRequest
       .put("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/opened_1")
       .content("{\"title\": \"new Title\", \"description\": \"new description\"}".getBytes())
@@ -619,7 +616,7 @@ public class PullRequestRootResourceTest {
     dispatcher.invoke(request, response);
 
     assertThat(response.getContentAsString()).containsPattern("could not find.*");
-    verify(store, never()).update(any());
+    verify(pullRequestService, never()).update(any(), any(), any());
   }
 
   @Test
@@ -629,23 +626,24 @@ public class PullRequestRootResourceTest {
       .put("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/1")
       .content("{\"title\": \"new Title\", \"description\": \"new description\"}".getBytes())
       .contentType(PullRequestMediaType.PULL_REQUEST);
-    PullRequest pullRequest = createPullRequest();
-    when(store.get("1")).thenReturn(pullRequest);
+    mockSinglePullRequest("1", createPullRequest());
 
     dispatcher.invoke(request, response);
 
     assertEquals(403, response.getStatus());
 
-    verify(store, never()).update(any());
+    verify(pullRequestService, never()).update(any(), any(), any());
   }
 
+  private void mockSinglePullRequest(String id, PullRequest existingPullRequest) {
+    when(pullRequestService.get(REPOSITORY_NAMESPACE, REPOSITORY_NAME, id)).thenReturn(existingPullRequest);
+    when(pullRequestService.get(repository, id)).thenReturn(existingPullRequest);
+  }
 
   @Test
   public void shouldGetTheSubscriptionLink() throws URISyntaxException, IOException {
     // the PR has no subscriber
-    PullRequest pullRequest = createPullRequest();
-
-    when(store.get("1")).thenReturn(pullRequest);
+    mockSinglePullRequest("1", createPullRequest());
 
     mockLoggedInUser(new User("user1", "User 1", "email@d.de"));
 
@@ -661,9 +659,7 @@ public class PullRequestRootResourceTest {
 
   @Test
   public void shouldGetTheApproveAndSubscriptionLink() throws URISyntaxException, IOException {
-    PullRequest pullRequest = createPullRequest();
-
-    when(store.get("1")).thenReturn(pullRequest);
+    mockSinglePullRequest("1", createPullRequest());
 
     mockLoggedInUser(new User("user1", "User 1", "email@d.de"));
 
@@ -678,10 +674,9 @@ public class PullRequestRootResourceTest {
   }
 
   @Test
+  @SubjectAware(username = "slarti")
   public void shouldGetTheApproveButNoSubscriptionLinkWithoutMail() throws URISyntaxException, IOException {
-    PullRequest pullRequest = createPullRequest();
-
-    when(store.get("1")).thenReturn(pullRequest);
+    mockSinglePullRequest("1", createPullRequest());
 
     mockLoggedInUser(new User("user1", "User 1", null));
 
@@ -697,7 +692,6 @@ public class PullRequestRootResourceTest {
 
   @Test
   public void shouldNotReturnAnySubscriptionLinkOnMissingUserMail() throws URISyntaxException, IOException {
-    // the PR has no subscriber
     mockLoggedInUser(new User("user1", "User 1", null));
 
     MockHttpRequest request = MockHttpRequest
@@ -709,11 +703,8 @@ public class PullRequestRootResourceTest {
 
   @Test
   public void shouldGetTheUnsubscribeLink() throws URISyntaxException, IOException {
-    PullRequest pullRequest = createPullRequest();
-    pullRequest.setSubscriber(singleton("user1"));
-
-    when(store.get("1")).thenReturn(pullRequest);
-
+    when(pullRequestService.isUserSubscribed(repository, "1"))
+      .thenReturn(true);
     mockLoggedInUser(new User("user1", "User 1", "email@d.de"));
 
     MockHttpRequest request = MockHttpRequest
@@ -722,40 +713,36 @@ public class PullRequestRootResourceTest {
     assertThat(response.getStatus()).isEqualTo(200);
     ObjectMapper mapper = new ObjectMapper();
     JsonNode jsonNode = mapper.readValue(response.getContentAsString(), JsonNode.class);
-    assertThat(jsonNode.path("_links").get("subscribe"))
-      .isNull();
     assertThat(jsonNode.path("_links").get("unsubscribe"))
       .isNotNull();
+    assertThat(jsonNode.path("_links").get("subscribe"))
+      .isNull();
   }
 
-  private void verifyFilteredPullRequests(String status) throws URISyntaxException, IOException {
-    initRepoWithPRs("ns", "repo");
-    MockHttpRequest request = MockHttpRequest.get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo?status=" + status);
-    dispatcher.invoke(request, response);
-    assertThat(response.getStatus()).isEqualTo(200);
-    ObjectMapper mapper = new ObjectMapper();
-    JsonNode jsonNode = mapper.readValue(response.getContentAsString(), JsonNode.class);
-    JsonNode prNode = jsonNode.get("_embedded").get("pullRequests");
-    assertThat(prNode.elements().hasNext()).isTrue();
-    prNode.elements().forEachRemaining(node -> assertThat(node.get("status").asText()).isEqualTo(status));
-  }
-
-  private void initRepoWithPRs(String namespace, String name) throws IOException {
-    mockChangesets("develop", "master", new Changeset());
-    when(repository.getNamespace()).thenReturn(namespace);
-    when(repository.getName()).thenReturn(name);
-    PullRequest openedPR1 = createPullRequest("opened_1", PullRequestStatus.OPEN);
-    PullRequest openedPR2 = createPullRequest("opened_2", PullRequestStatus.OPEN);
-    PullRequest mergedPR1 = createPullRequest("merged_1", PullRequestStatus.MERGED);
-    PullRequest mergedPR2 = createPullRequest("merged_2", PullRequestStatus.MERGED);
-    PullRequest rejectedPR1 = createPullRequest("rejected_1", REJECTED);
-    PullRequest rejectedPR2 = createPullRequest("rejected_2", REJECTED);
-    openedPR2.setAuthor("author");
-    mergedPR2.setAuthor("author");
-    openedPR1.setReviewer(singletonMap("reviewer", false));
-    mergedPR1.setReviewer(singletonMap("reviewer", true));
-    when(store.getAll()).thenReturn(Lists.newArrayList(openedPR1, openedPR2, rejectedPR1, rejectedPR2, mergedPR1, mergedPR2));
-    when(commentService.getAll(any(), any(), any())).thenReturn(Collections.emptyList());
+  private void initRepoWithPRs(PullRequestStatus... status) {
+    List<PullRequest> pullRequests = new ArrayList<>();
+    if (status.length == 0 || List.of(status).contains(OPEN)) {
+      PullRequest openedPR1 = createPullRequest("opened_1", PullRequestStatus.OPEN);
+      PullRequest openedPR2 = createPullRequest("opened_2", PullRequestStatus.OPEN);
+      openedPR2.setAuthor("author");
+      openedPR1.setReviewer(singletonMap("reviewer", false));
+      pullRequests.add(openedPR1);
+      pullRequests.add(openedPR2);
+    }
+    if (status.length == 0 || List.of(status).contains(MERGED)) {
+      PullRequest mergedPR1 = createPullRequest("merged_1", PullRequestStatus.MERGED);
+      PullRequest mergedPR2 = createPullRequest("merged_2", PullRequestStatus.MERGED);
+      mergedPR2.setAuthor("author");
+      mergedPR1.setReviewer(singletonMap("reviewer", true));
+      pullRequests.add(mergedPR1);
+      pullRequests.add(mergedPR2);
+    }
+    if (status.length == 0 || List.of(status).contains(REJECTED)) {
+      PullRequest rejectedPR1 = createPullRequest("rejected_1", REJECTED);
+      PullRequest rejectedPR2 = createPullRequest("rejected_2", REJECTED);
+      pullRequests.add(rejectedPR1);
+      pullRequests.add(rejectedPR2);
+    }
   }
 
   private byte[] loadJson(String s) throws IOException {
@@ -781,7 +768,7 @@ public class PullRequestRootResourceTest {
   }
 
   private JsonNode invokeAndReturnLinks() throws URISyntaxException, IOException {
-    initRepoWithPRs("hitchhiker", "DeepThought");
+    initRepoWithPRs();
 
     String uri = "/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo";
 
@@ -795,67 +782,62 @@ public class PullRequestRootResourceTest {
 
   @Test
   public void shouldSetPullRequestToStatusRejected() throws URISyntaxException {
-    Subject subject = mock(Subject.class, RETURNS_DEEP_STUBS);
-    shiroRule.setSubject(subject);
-    User currentUser = new User("currentUser");
-    when(subject.getPrincipals().oneByType(User.class)).thenReturn(currentUser);
+    mockSinglePullRequest("1", createPullRequest("opened_1", PullRequestStatus.OPEN));
 
-    when(store.get("1")).thenReturn(createPullRequest("opened_1", PullRequestStatus.OPEN));
-    when(branchResolver.resolve(any(), any())).thenReturn(Branch.normalBranch("master", "123"));
     MockHttpRequest request = MockHttpRequest
       .post("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/1/reject");
     dispatcher.invoke(request, response);
     assertThat(response.getStatus()).isEqualTo(HttpServletResponse.SC_NO_CONTENT);
-    verify(store).update(argThat(pullRequest -> {
-      assertThat(pullRequest.getStatus()).isEqualTo(REJECTED);
-      return true;
-    }));
+    verify(pullRequestService)
+      .reject(repository, "1", REJECTED_BY_USER);
   }
 
   @Test
-  @SubjectAware(username = "slarti")
-  public void shouldRejectChangingStatusOfMergedPullRequest() throws URISyntaxException {
-    when(store.get("1")).thenReturn(createPullRequest("opened_1", PullRequestStatus.MERGED));
-    MockHttpRequest request = MockHttpRequest
-      .post("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/1/reject");
+  public void shouldSetPullRequestToStatusRejectedWithMessage() throws URISyntaxException {
+    mockSinglePullRequest("1", createPullRequest("opened_1", PullRequestStatus.OPEN));
+
+    JsonMockHttpRequest request = JsonMockHttpRequest
+      .post("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/1/rejectWithMessage")
+      .json("{'message':'boring'}");
     dispatcher.invoke(request, response);
-    assertThat(response.getStatus()).isEqualTo(HttpServletResponse.SC_BAD_REQUEST);
-    verify(store, never()).update(any());
+    assertThat(response.getStatus()).isEqualTo(HttpServletResponse.SC_NO_CONTENT);
+    verify(pullRequestService)
+      .reject(repository, "1", "boring");
   }
 
   @Test
   @SubjectAware(username = "dent")
   public void shouldApprove() throws URISyntaxException {
-    initPullRequestRootResource();
-
     MockHttpRequest request = MockHttpRequest
       .post("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/1/approve");
     dispatcher.invoke(request, response);
+
     verify(pullRequestService).approve(new NamespaceAndName("ns", "repo"), "1");
     assertThat(response.getStatus()).isEqualTo(204);
   }
 
-
   @Test
   @SubjectAware(username = "dent")
   public void shouldDisapprove() throws URISyntaxException {
-    initPullRequestRootResource();
-
     MockHttpRequest request = MockHttpRequest
       .post("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/1/disapprove");
     dispatcher.invoke(request, response);
-    verify(pullRequestService).disapprove(any(), any());
+    verify(pullRequestService).disapprove(new NamespaceAndName("ns", "repo"), "1");
     assertThat(response.getStatus()).isEqualTo(204);
   }
 
   @Test
   @SubjectAware(username = "dent")
   public void shouldMarkAsReviewed() throws URISyntaxException {
-    initPullRequestRootResource();
+    PullRequest pr = new PullRequest("1", "source", "target");
+    pr.setStatus(PullRequestStatus.OPEN);
+    pr.setTitle("title");
+    mockSinglePullRequest("1", pr);
 
     MockHttpRequest request = MockHttpRequest
       .post("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/1/review-mark/some/file");
     dispatcher.invoke(request, response);
+
     verify(pullRequestService).markAsReviewed(repository, "1", "some/file");
     assertThat(response.getStatus()).isEqualTo(204);
   }
@@ -863,11 +845,10 @@ public class PullRequestRootResourceTest {
   @Test
   @SubjectAware(username = "dent")
   public void shouldMarkAsNotReviewed() throws URISyntaxException {
-    initPullRequestRootResource();
-
     MockHttpRequest request = MockHttpRequest
       .delete("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/1/review-mark/some/file");
     dispatcher.invoke(request, response);
+
     verify(pullRequestService).markAsNotReviewed(repository, "1", "some/file");
     assertThat(response.getStatus()).isEqualTo(204);
   }
@@ -875,13 +856,12 @@ public class PullRequestRootResourceTest {
   @Test
   @SubjectAware(username = "dent")
   public void shouldGetMarkAsReviewedLink() throws URISyntaxException, IOException {
-    PullRequest pullRequest = createPullRequest();
-
-    when(store.get("1")).thenReturn(pullRequest);
+    mockSinglePullRequest("1", createPullRequest());
 
     MockHttpRequest request = MockHttpRequest
       .get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/1");
     dispatcher.invoke(request, response);
+
     assertThat(response.getStatus()).isEqualTo(200);
     ObjectMapper mapper = new ObjectMapper();
     JsonNode jsonNode = mapper.readValue(response.getContentAsString(), JsonNode.class);
@@ -895,12 +875,12 @@ public class PullRequestRootResourceTest {
 
     PullRequest pullRequest = createPullRequest();
     pullRequest.setAuthor("slarti");
-    pullRequest.setReviewMarks(ImmutableSet.of(
+    pullRequest.setReviewMarks(Set.of(
       new ReviewMark("/some/file", "dent"),
       new ReviewMark("/some/other/file", "trillian")
     ));
 
-    when(store.get("1")).thenReturn(pullRequest);
+    mockSinglePullRequest("1", pullRequest);
 
     MockHttpRequest request = MockHttpRequest
       .get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/1");
@@ -911,12 +891,9 @@ public class PullRequestRootResourceTest {
 
   @Test
   @SubjectAware(username = "dent")
-  public void shouldReturnPullRequestIsValidResult() throws URISyntaxException, IOException {
-    mockLoggedInUser(new User("dent"));
-    mockLogCommandForPullRequestCheck(ImmutableList.of(new Changeset()));
-
-    PullRequest pullRequest = createPullRequest();
-    when(store.getAll()).thenReturn(ImmutableList.of(pullRequest));
+  public void shouldReturnPullRequestIsValidResultForNewPullRequest() throws URISyntaxException, IOException {
+    when(pullRequestService.checkIfPullRequestIsValid(repository, "feature", "master"))
+      .thenReturn(PullRequestCheckResultDto.PullRequestCheckStatus.PR_VALID);
 
     MockHttpRequest request = MockHttpRequest
       .get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/check?source=feature&target=master");
@@ -929,74 +906,169 @@ public class PullRequestRootResourceTest {
 
   @Test
   @SubjectAware(username = "dent")
-  public void shouldReturnBranchesNotDifferResultIfSameBranches() throws URISyntaxException, IOException {
-    mockLoggedInUser(new User("dent"));
-    mockLogCommandForPullRequestCheck(ImmutableList.of(new Changeset()));
-
+  public void shouldReturnIllegalRequestIfSourceBranchIsEmpty() throws URISyntaxException {
     MockHttpRequest request = MockHttpRequest
-      .get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/check?source=master&target=master");
+      .get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/check?source=&target=master");
 
     dispatcher.invoke(request, response);
-    assertThat(response.getStatus()).isEqualTo(200);
-    assertThat(response.getContentAsString()).contains("\"status\":\"BRANCHES_NOT_DIFFER\"");
-    assertThat(response.getContentAsString()).contains("\"_links\":{\"self\":{\"href\":\"/v2/pull-requests/ns/repo/check?source=master&target=master\"}}");
+    assertThat(response.getStatus()).isEqualTo(400);
   }
 
   @Test
   @SubjectAware(username = "dent")
-  public void shouldReturnBranchesNotDifferResultIfNoChangesetsInDiff() throws URISyntaxException, IOException {
-    mockLoggedInUser(new User("dent"));
-    mockLogCommandForPullRequestCheck(emptyList());
-
-    MockHttpRequest request = MockHttpRequest
-      .get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/check?source=feature&target=master");
-
-    dispatcher.invoke(request, response);
-    assertThat(response.getStatus()).isEqualTo(200);
-    assertThat(response.getContentAsString()).contains("\"status\":\"BRANCHES_NOT_DIFFER\"");
-    assertThat(response.getContentAsString()).contains("\"_links\":{\"self\":{\"href\":\"/v2/pull-requests/ns/repo/check?source=feature&target=master\"}}");
-  }
-
-  @Test
-  @SubjectAware(username = "dent")
-  public void shouldReturnAlreadyExistsResult() throws URISyntaxException, IOException {
-    mockLoggedInUser(new User("dent"));
-    mockLogCommandForPullRequestCheck(ImmutableList.of(new Changeset()));
+  public void shouldReturnIllegalRequestIfTargetBranchIsEmpty() throws URISyntaxException {
     PullRequest pullRequest = createPullRequest();
-    when(store.getAll()).thenReturn(ImmutableList.of(pullRequest));
+    pullRequest.setSource("");
 
     MockHttpRequest request = MockHttpRequest
-      .get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/check?source=develop&target=master");
+      .get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/check?source=feature&target=");
+
+    dispatcher.invoke(request, response);
+    assertThat(response.getStatus()).isEqualTo(400);
+  }
+
+  @Test
+  @SubjectAware(username = "dent")
+  public void shouldReturnPullRequestTemplate() throws URISyntaxException, IOException {
+    RepositoryPullRequestConfig config = new RepositoryPullRequestConfig();
+    config.setDefaultReviewers(List.of("dent"));
+    config.setDefaultTasks(List.of("first task", "second"));
+
+    when(configService.evaluateConfig(repository)).thenReturn(config);
+
+    MockHttpRequest request = MockHttpRequest
+      .get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/template");
 
     dispatcher.invoke(request, response);
     assertThat(response.getStatus()).isEqualTo(200);
-    assertThat(response.getContentAsString()).contains("\"status\":\"PR_ALREADY_EXISTS\"");
-    assertThat(response.getContentAsString()).contains("\"_links\":{\"self\":{\"href\":\"/v2/pull-requests/ns/repo/check?source=develop&target=master\"}}");
+    assertThat(response.getContentAsString()).contains("\"defaultReviewers\":[{\"id\":\"dent\",\"displayName\":\"dent\"}]");
+    assertThat(response.getContentAsString()).contains("\"_links\":{\"self\":{\"href\":\"/v2/pull-requests/ns/repo/template\"}}");
+    assertThat(response.getContentAsString()).contains("\"title\":\"\"");
+    assertThat(response.getContentAsString()).contains("\"description\":\"\"");
+    assertThat(response.getContentAsString()).contains("\"availableLabels\":[]");
+    assertThat(response.getContentAsString()).contains("\"defaultTasks\":[\"first task\",\"second\"]");
   }
 
-  private void mockLogCommandForPullRequestCheck(List<Changeset> changesets) throws IOException {
+  @Test
+  @SubjectAware(username = "dent")
+  public void shouldReturnPullRequestTemplateWithTitleAndDescriptionForSingleChangeset() throws URISyntaxException, IOException {
+    RepositoryPullRequestConfig config = new RepositoryPullRequestConfig();
+
+    when(configService.evaluateConfig(repository)).thenReturn(config);
     when(repositoryServiceFactory.create(repository)).thenReturn(repositoryService);
     when(repositoryService.getLogCommand()).thenReturn(logCommandBuilder);
-    when(logCommandBuilder.getChangesets()).thenReturn(new ChangesetPagingResult(0, changesets));
+    when(logCommandBuilder.getChangesets()).thenReturn(new ChangesetPagingResult(0, List.of(new Changeset("hashtag", Instant.now().getEpochSecond(), new Person("Test"), "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.\nMore Text"))));
+
+    MockHttpRequest request = MockHttpRequest
+      .get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/template?source=develop&target=master");
+
+    dispatcher.invoke(request, response);
+    assertThat(response.getStatus()).isEqualTo(200);
+    assertThat(response.getContentAsString()).contains("\"title\":\"");
+    assertThat(response.getContentAsString()).contains("\"description\":\"...");
   }
 
-  private void mockLoggedInUser(User user1) {
-    Subject subject = mock(Subject.class);
+  @Test
+  @SubjectAware(username = "dent")
+  public void shouldReturnPullRequestTemplateWithTitleAndDescriptionForMultipleChangesets() throws URISyntaxException, IOException {
+    RepositoryPullRequestConfig config = new RepositoryPullRequestConfig();
+
+    when(configService.evaluateConfig(repository)).thenReturn(config);
+    when(repositoryServiceFactory.create(repository)).thenReturn(repositoryService);
+    when(repositoryService.getLogCommand()).thenReturn(logCommandBuilder);
+    when(logCommandBuilder.getChangesets()).thenReturn(new ChangesetPagingResult(0, List.of(
+      new Changeset("hashtag", Instant.now().getEpochSecond(), new Person("Test"), "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.\nMore Text"),
+      new Changeset("another", Instant.now().getEpochSecond(), new Person("someguy"), "Another important description")
+    )));
+
+    MockHttpRequest request = MockHttpRequest
+      .get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/template?source=develop&target=master");
+
+    dispatcher.invoke(request, response);
+    assertThat(response.getStatus()).isEqualTo(200);
+    assertThat(response.getContentAsString()).contains("\"title\":\"\"");
+    assertThat(response.getContentAsString()).contains("\"description\":\"\"");
+  }
+
+  @Test
+  @SubjectAware(username = "trillian")
+  public void shouldGetUnauthorizedBecauseOfMissingReadPullRequestPermission() throws URISyntaxException {
+    MockHttpRequest request = MockHttpRequest
+      .get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/1/changes");
+
+    dispatcher.invoke(request, response);
+    assertThat(response.getStatus()).isEqualTo(403);
+  }
+
+  @Test
+  @SubjectAware(username = "dent")
+  public void shouldGetHistoryOfPullRequest() throws URISyntaxException {
+    List<PullRequestChange> changes = List.of(
+      new PullRequestChange(
+        "1",
+        "dent",
+        "Dent",
+        "dent@mail.com",
+        Instant.now(),
+        "previous",
+        "current",
+        "Property",
+        Map.of("key", "value")
+      ),
+      new PullRequestChange(
+        "1",
+        "dent",
+        "Dent",
+        "dent@mail.com",
+        Instant.now(),
+        "other previous value",
+        "other current value",
+        "Other Property",
+        Map.of("Other key", "Other value")
+      )
+    );
+
+    when(pullRequestChangeService.getAllChangesOfPullRequest(repository.getNamespaceAndName(), "1"))
+      .thenReturn(changes);
+
+    MockHttpRequest request = MockHttpRequest
+      .get("/" + PullRequestRootResource.PULL_REQUESTS_PATH_V2 + "/ns/repo/1/changes");
+
+    dispatcher.invoke(request, response);
+    assertThat(response.getStatus()).isEqualTo(200);
+
+    JsonNode node = response.getContentAsJson();
+    assertThat(node.isArray()).isTrue();
+    assertThat(node.size()).isEqualTo(2);
+
+    assertThat(node.get(0).get("prId").asText()).isEqualTo(changes.get(0).getPrId());
+    assertThat(node.get(0).get("username").asText()).isEqualTo(changes.get(0).getUsername());
+    assertThat(node.get(0).get("displayName").asText()).isEqualTo(changes.get(0).getDisplayName());
+    assertThat(node.get(0).get("mail").asText()).isEqualTo(changes.get(0).getMail());
+    assertThat(node.get(0).get("changedAt").asText()).isEqualTo(changes.get(0).getChangedAt().toString());
+    assertThat(node.get(0).get("previousValue").asText()).isEqualTo(changes.get(0).getPreviousValue());
+    assertThat(node.get(0).get("currentValue").asText()).isEqualTo(changes.get(0).getCurrentValue());
+    assertThat(node.get(0).get("property").asText()).isEqualTo(changes.get(0).getProperty());
+    assertThat(node.get(0).get("additionalInfo").get("key").asText()).isEqualTo(changes.get(0).getAdditionalInfo().get("key"));
+
+    assertThat(node.get(1).get("prId").asText()).isEqualTo(changes.get(1).getPrId());
+    assertThat(node.get(1).get("username").asText()).isEqualTo(changes.get(1).getUsername());
+    assertThat(node.get(1).get("displayName").asText()).isEqualTo(changes.get(1).getDisplayName());
+    assertThat(node.get(1).get("mail").asText()).isEqualTo(changes.get(1).getMail());
+    assertThat(node.get(1).get("changedAt").asText()).isEqualTo(changes.get(1).getChangedAt().toString());
+    assertThat(node.get(1).get("previousValue").asText()).isEqualTo(changes.get(1).getPreviousValue());
+    assertThat(node.get(1).get("currentValue").asText()).isEqualTo(changes.get(1).getCurrentValue());
+    assertThat(node.get(1).get("property").asText()).isEqualTo(changes.get(1).getProperty());
+    assertThat(node.get(1).get("additionalInfo").get("Other key").asText()).isEqualTo(changes.get(1).getAdditionalInfo().get("Other key"));
+  }
+
+  private void mockLoggedInUser(User user) {
     ThreadContext.bind(subject);
 
     PrincipalCollection principals = mock(PrincipalCollection.class);
     when(subject.getPrincipals()).thenReturn(principals);
     when(subject.isPermitted(any(String.class))).thenReturn(true);
-    when(principals.oneByType(User.class)).thenReturn(user1);
-    when(principals.getPrimaryPrincipal()).thenReturn(user1.getId());
-  }
-
-  private void initPullRequestRootResource() {
-    PullRequestRootResource rootResource =
-      new PullRequestRootResource(mapper, pullRequestService, repositoryServiceFactory, Providers.of(new PullRequestResource(mapper, pullRequestService, null, null, channelRegistry)));
-
-    dispatcher = new RestDispatcher();
-    dispatcher.addSingletonResource(rootResource);
+    when(principals.oneByType(User.class)).thenReturn(user);
   }
 
   private void mockPrincipal() {
@@ -1007,15 +1079,5 @@ public class PullRequestRootResourceTest {
     user1.setName("user1");
     user1.setDisplayName("User 1");
     when(principals.oneByType(User.class)).thenReturn(user1);
-  }
-
-  private void mockChangesets(String sourceBranch, String targetBranch, Changeset... changesets) throws IOException {
-    when(repositoryService.getLogCommand()).thenReturn(logCommandBuilder);
-    LogCommandBuilder subLogCommandBuilder = mock(LogCommandBuilder.class);
-    when(logCommandBuilder.setStartChangeset(sourceBranch)).thenReturn(subLogCommandBuilder);
-    when(subLogCommandBuilder.setAncestorChangeset(targetBranch)).thenReturn(subLogCommandBuilder);
-    when(subLogCommandBuilder.setPagingStart(0)).thenReturn(subLogCommandBuilder);
-    when(subLogCommandBuilder.setPagingLimit(1)).thenReturn(subLogCommandBuilder);
-    when(subLogCommandBuilder.getChangesets()).thenReturn(new ChangesetPagingResult(changesets.length, asList(changesets)));
   }
 }
